@@ -1,3 +1,6 @@
+[B]2.1.1[/B] - 27-01-2018
+- Updated radio stream url
+
 [B]2.1.0[/B] - 14-12-2018
 - Restored transparency for artwork and updated others
 - Moved part of code into lib directory
